force-app/main/default/objects/Price__c/fields/Joining_Fee__c.field-meta.xml
<CustomField>
    <fullName>Joining_Fee__c</fullName>
    <label>Joining Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>