force-app/main/default/objects/Price__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <formula>Product_Name__c + &quot; - £&quot; +  TEXT(Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label</label>
    <type>Text</type>
</CustomField>