force-app/main/default/objects/Price__c/fields/Price_Description__c.field-meta.xml
<CustomField>
    <fullName>Price_Description__c</fullName>
    <label>Price Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>