force-app/main/default/objects/Price__c/fields/Price_Detail__c.field-meta.xml
<CustomField>
    <fullName>Price_Detail__c</fullName>
    <label>Price Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>