force-app/main/default/objects/Price__c/fields/Price_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Price_Prompt__c</fullName>
    <label>Price Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>