force-app/main/default/objects/Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>