force-app/main/default/objects/Price__c/fields/Show_in_Web__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Web</label>
    <type>Checkbox</type>
</CustomField>